welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:18: error: not found: value ecritmessage
      ecritmessage(cpt)
      ^ColumnByColumn:18: error: not found: value cpt
      ecritmessage(cpt)
                   ^ColumnByColumn:19: error: not found: value cpt
      cpt +=1
      ^